UPDATE: Repaired the text-align of nav ul>li (2).

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -324,7 +324,8 @@ button a {
         gap: 2rem;
         background-color: #1B1A17;
         transform: translateY(-150%);
-        width: 90%;
+        width: 100%;
+        padding-right: 10px;
         top: 65px;
         left: 0;
         z-index: -5;
